--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ TYPEORM_PORT = 5432
 
 TYPEORM_MIGRATIONS_DIR = ./src/database/migrations
 TYPEORM_MIGRATIONS = ./src/database/migrations/*.ts
+TYPEORM_ENTITIES_DIR = ./src/database/entities
+TYPEORM_ENTITIES = ./src/database/entities/*.ts
