Fixed TypeORM entity paths

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ TYPEORM_PORT = 5432
 
 TYPEORM_MIGRATIONS_DIR = ./src/database/migrations
 TYPEORM_MIGRATIONS = ./src/database/migrations/*.ts
-TYPEORM_ENTITIES_DIR = ./src/database/entities
-TYPEORM_ENTITIES = ./src/database/entities/*.ts
+TYPEORM_ENTITIES_DIR = ./src/entities
+TYPEORM_ENTITIES = ./src/entities/*.ts
